# Nebula-AI-Sandbox

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
assets/scripts/: demo.lua
assets/shaders/: Fragment.glsl  Vertex.glsl
src/: main.cpp
src/AI/: AIPanel.cpp  AIPanel.h  AgentOrchestrator.cpp  AgentOrchestrator.h  DemoScene.cpp  DemoScene.h
src/Core/: Application.cpp  Application.h  Event.h  Log.cpp  Log.h
src/Editor/: EditorLayer.h
src/Physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/Platform/: Input.cpp  Input.h  Window.cpp  Window.h
src/Render/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/Scene/: Scene.cpp  Scene.h  SceneSerializer.h
src/Scripting/: LuaScript.cpp.bak  LuaScript.h
src/Tools/: ITool.h  RuntimeTool.cpp  RuntimeTool.h  SceneTool.cpp  SceneTool.h  ScriptingTool.cpp  ScriptingTool.h  ToolResult.h  ToolRouter.cpp  ToolRouter.h
